--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,6 @@
     <color name="colorAccent">#FF4081</color>
     <color name="screenBackground">#2196F3</color>
     <color name="buttonBackground">#BBDEFB</color>
-    <color name="buttonBackground2">#BBDEFB</color>
+    <color name="buttonBackground2">#1aff00</color>
     <color name="screenBackground2">#26C6DA</color>
 </resources>
